@@ -1,83 +1,0 @@
-// -*- C++ -*-
-// $Id$
-
-/**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v1.7.4
- * TAO and the TAO IDL Compiler have been developed by:
- *       Center for Distributed Object Computing
- *       Washington University
- *       St. Louis, MO
- *       USA
- *       http://www.cs.wustl.edu/~schmidt/doc-center.html
- * and
- *       Distributed Object Computing Laboratory
- *       University of California at Irvine
- *       Irvine, CA
- *       USA
- *       http://doc.ece.uci.edu/
- * and
- *       Institute for Software Integrated Systems
- *       Vanderbilt University
- *       Nashville, TN
- *       USA
- *       http://www.isis.vanderbilt.edu/
- *
- * Information about TAO is available at:
- *     http://www.cs.wustl.edu/~schmidt/TAO.html
- **/
-
-// TAO_IDL - Generated from
-// C:\ACE\latest\ACE_wrappers\TAO\TAO_IDL\be\be_codegen.cpp:134
-
-#ifndef _TAO_IDL_CCM_DDS_H
-#define _TAO_IDL_CCM_DDS_H
-
-#include /**/ "ace/pre.h"
-
-
-#include /**/ "ace/config-all.h"
-
-#if !defined (ACE_LACKS_PRAGMA_ONCE)
-# pragma once
-#endif /* ACE_LACKS_PRAGMA_ONCE */
-
-
-#include /**/ "dds4ccm_stub_export.h"
-#include "tao/AnyTypeCode/AnyTypeCode_methods.h"
-#include "tao/ORB.h"
-#include "tao/UserException.h"
-#include "tao/Basic_Types.h"
-#include "tao/String_Manager_T.h"
-#include "tao/Sequence_T.h"
-#include "tao/Seq_Var_T.h"
-#include "tao/Seq_Out_T.h"
-#include "tao/VarOut_T.h"
-#include /**/ "tao/Versioned_Namespace.h"
-
-#include "ComponentsC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_DataListenerControlC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_DataListenerControlEC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_StateListenerControlC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_StateListenerControlEC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_PortStatusListenerC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_PortStatusListenerEC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_ConnectorStatusListenerC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_ConnectorStatusListenerEC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_ConnectorC.h"
-#include "connectors/dds4ccm/idl/dds4ccm_ConnectorEC.h"
-#include "connectors/dds4ccm/idl/dds_rtf2_dcpsEC.h"
-#include "dds_rtf2_dcpsC.h"
-
-#if defined (TAO_EXPORT_MACRO)
-#undef TAO_EXPORT_MACRO
-#endif
-#define TAO_EXPORT_MACRO DDS4CCM_STUB_Export
-
-// TAO_IDL - Generated from
-// c:\ace\latest\ace_wrappers\tao\tao_idl\be\be_visitor_module/module_ch.cpp:49
-
-#include /**/ "ace/post.h"
-
-#endif /* ifndef */
-
-
